SEM-10: correct image height overflow text

--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_Partnership.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_Partnership.scss
@@ -100,6 +100,7 @@
   position: relative;
   display: flex;
   align-items: flex-start;
+  z-index: 1;
 
   @include media-breakpoint-up('md') {
     @include make-cols(6, 1);
@@ -119,6 +120,7 @@
 
 .Partnership-img {
   position: relative;
+  z-index: 1;
 
   .Brush {
     display: none;
@@ -134,6 +136,10 @@
       fill: var(--ebb);
       opacity: .8;
     }
+  }
+
+  @include media-breakpoint-up('md') {
+    min-height: rem(350px);
   }
 }
 
